--- a/Anyconnect/ocserv/ssl/user.tmpl
+++ b/Anyconnect/ocserv/ssl/user.tmpl
@@ -1,27 +1,5 @@
-# The organization ounit f the subject.
-
-unit = "Route"
-
-# The common name of the certificate owner.
-
-cn = "MahuaTeng.1763176617"
-
-# In how many days, counting from today, this certificate will expire. Use -1 if there is no expiration date.
-
-expiration_days = 365
-
-# Whether this certificate will be used for a TLS server
-
-tls_www_client
-
-# Whether this certificate will be used to sign data
-
+cn = "huluobo"
+unit = "NoRoute"
+expiration_days = 1825
 signing_key
-
-# Whether this certificate will be used to encrypt data (needed
-
-# in TLS RSA ciphersuites). Note that it is preferred to use different
-
-# keys for encryption and signing.
-
-encryption_key
+tls_www_client
